# foris-controller

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py
doc/: data-flow.dot  design.rst  mqtt.rst  protocol.rst  writting-new-modules.rst
doc/examples/: NEW_MODULE.md  cookiecutter.json  rename_sample.sh
doc/examples/{{ cookiecutter.name_snake }}/: .gitlab-ci.yml  CHANGELOG.rst  README.md  README.rst  pyproject.toml  setup.py  tox.ini
doc/examples/{{ cookiecutter.name_snake }}/foris_controller_backends/{{ cookiecutter.name_snake }}/: __init__.py
doc/examples/{{ cookiecutter.name_snake }}/foris_controller_modules/{{ cookiecutter.name_snake }}/: __init__.py
doc/examples/{{ cookiecutter.name_snake }}/foris_controller_modules/{{ cookiecutter.name_snake }}/handlers/: __init__.py  mock.py  openwrt.py
doc/examples/{{ cookiecutter.name_snake }}/foris_controller_modules/{{ cookiecutter.name_snake }}/schema/: {{ cookiecutter.name_snake }}.json
doc/examples/{{ cookiecutter.name_snake }}/foris_controller_{{ cookiecutter.name_snake }}_module/: __init__.py  announcer.py
doc/examples/{{ cookiecutter.name_snake }}/tests/: conftest.py  test_{{ cookiecutter.name_snake }}.py
foris_controller/: __init__.py  app.py  client_socket.py  exceptions.py  handler_base.py  message_router.py  module_base.py  profiles.py  updater.py  utils.py  zconf.py
foris_controller/backends/: __init__.py  base.py  mock.py  openwrt.py
foris_controller/buses/: __init__.py  base.py  mqtt.py  ubus.py  unix_socket.py
foris_controller/controller/: __main__.py
foris_controller/modules/: __init__.py  about.py  base.py
foris_controller/notify/: __main__.py
foris_controller/schemas/: errors.json
foris_controller_backends/about/: __init__.py
foris_controller_backends/cmdline/: __init__.py
foris_controller_backends/data_collect/: __init__.py
foris_controller_backends/dns/: __init__.py
foris_controller_backends/files/: __init__.py
foris_controller_backends/guest/: __init__.py
foris_controller_backends/lan/: __init__.py
foris_controller_backends/maintain/: __init__.py
foris_controller_backends/networks/: __init__.py
foris_controller_backends/password/: __init__.py
foris_controller_backends/remote/: __init__.py
foris_controller_backends/router_notifications/: __init__.py
foris_controller_backends/services/: __init__.py
foris_controller_backends/subordinates/: __init__.py
foris_controller_backends/system/: __init__.py
tests/: conftest.py  fixtures.py  test_about.py  test_async_commands.py  test_client_socket.py  test_custom_module_list.py  test_data_collect.py  test_dns.py  test_errors.py  test_guest.py  test_lan.py  test_locks.py  test_long_messages.py  test_maintain.py  test_networks.py  test_notifications.py  test_password.py  test_profiles.py  test_router_notifications.py  test_services.py  test_time.py  test_uci.py  test_updater.py  test_wan.py  test_web.py  test_wifi.py  utils.py
(+189 files in other folders)
