[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foris-controller-{{ cookiecutter.name_snake }}-module"
dynamic = ["version"]
description = "{{ cookiecutter.name }} module for Foris Controller"
readme = "README.md"
license = { file = "COPYING" }
authors = [
    { name = "CZ.NIC, z.s.p.o. (https://www.nic.cz/)", email = "packaging@turris.cz" },
]
dependencies = [
    "foris-controller",
]

[project.optional-dependencies]
mqtt = [
    "paho-mqtt",
]
tests = [
    "pytest",
    "ubus",
    "paho-mqtt",
    "foris-controller",
    "foris-controller-testtools",
]
ubus = [
    "ubus",
]

[project.scripts]
turris-{{ cookiecutter.name_snake }} = "foris_controller_{{ cookiecutter.name_snake }}_module.__main__:main"

[project.entry-points.foris_controller_announcer]
{{ cookiecutter.name_snake }} = "foris_controller_{{ cookiecutter.name_snake }}_module.announcer:make_time_message"

[tool.hatch.build.targets.sdist]
include = [
    "foris_controller_backends/",
    "foris_controller_modules/",
    "foris_controller_{{ cookiecutter.name_snake }}_module/",
]
[tool.hatch.build.targets.wheel]
include = [
    "foris_controller_backends/",
    "foris_controller_modules/",
    "foris_controller_{{ cookiecutter.name_snake }}_module/",
]

[tool.hatch.version]
path = "foris_controller_{{ cookiecutter.name_snake }}_module/__init__.py"
